--- a/lab1.html
+++ b/lab1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<body style="font-family:Times New Roman;">
+<body style="font-family:Times New Roman; width:80%;align="justify";>
 <img src="https://cnc.ntut.edu.tw/var/file/4/1004/img/1544/Taipei-Tech-Logo.png" alt=Taipei Tech>
   <img src="https://cnc.ntut.edu.tw/var/file/4/1004/img/1544/Taipei-Tech-Logo.png" alt=Taipei Tech>
   <img src="https://cnc.ntut.edu.tw/var/file/4/1004/img/1544/Taipei-Tech-Logo.png" alt=Taipei Tech>
