--- a/Lab 3/Home.html
+++ b/Lab 3/Home.html
@@ -50,11 +50,11 @@
 <body>
   
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="C:\Users\Javid\Desktop\School\Web Programming\Lab 3\News.html">News</a>
-  <a href="C:\Users\Javid\Desktop\School\Web Programming\Lab 3\Characters.html">Characters</a>
-  <a href="C:\Users\Javid\Desktop\School\Web Programming\Lab 3\Schedule.html">Schedule</a>
-  <a href="C:\Users\Javid\Desktop\School\Web Programming\Lab 3\About.html">About</a>
+  <a class="active" href="https://github.com/Javid518/109990023/edit/main/Lab%203/Home.html">Home</a>
+  <a href="https://github.com/Javid518/109990023/edit/main/Lab%203/News.html">News</a>
+  <a href="https://github.com/Javid518/109990023/edit/main/Lab%203/Characters.html">Characters</a>
+  <a href="https://github.com/Javid518/109990023/edit/main/Lab%203/Schedule.html">Schedule</a>
+  <a href="https://github.com/Javid518/109990023/edit/main/Lab%203/About.html">About</a>
 </div>
   
 <div class="row">
